i18n/zh-Hant/docusaurus-plugin-content-docs/version-0.6.x/intro.md
---
sidebar_position: 1
---

# 簡介

**Gitti** 是一個快速、輕量級的 Git 操作終端 UI。它專為保持您的工作流而設計，透過鍵盤驅動的介面來執行常見的 Git 任務。

## 核心理念

Gitti 圍繞三個主要組件構建：

1.  **本地分支 / 標籤 / 遠端 (Local Branches / Tags / Remotes)** (左上) — 使用 `< / >` 切換
2.  **修改的檔案 (Modified Files)** (左中)
3.  **提交日誌 / RefLog (Commit Log / RefLog)** (左下) — 使用 `< / >` 切換
4.  **暫存區 (Stash)** (左下)
5.  **日誌面板 (Logging Panel)** (右下)

**詳細視圖 (Detail View)** (右側面板) 會根據您的選擇上下文進行更新。

## 全局導航

| 鍵          | 動作                     |
| :---------- | :----------------------- |
| `1`         | 切換焦點到**本地分支**   |
| `2`         | 切換焦點到**修改的檔案** |
| `3`         | 切換焦點到**提交日誌 / RefLog**   |
| `4`         | 切換焦點到**暫存區**     |
| `/`         | 切換焦點到**日誌面板**   |
| `tab`       | 向前切換組件             |
| `shift+tab` | 向後切換組件             |
| `?`         | 打開全局快捷鍵幫助       |

## 快速開始 {#getting-started}

1.  打開您的終端。
2.  導航到一個 Git 倉庫。
3.  運行 `gitti`。

您將看到介面已填充了當前倉庫的狀態。使用數字鍵 (`1`, `2`, `3`, `4`) 在面板之間跳轉。
